# Putivnykapp

./: .gitattributes  .gitignore  Makefile  README.md  build.gradle.kts  gradle.properties  gradlew  gradlew.sh  local.properties  settings.gradle.kts
.github/workflows/: ios-ipa.yml  ios-simulator.yml
app/: build.gradle.kts  proguard-rules.pro
app/schemas/ua.kyiv.putivnyk.data.local.PutivnykDatabase/: 6.json  7.json  8.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  geo_native.cpp
backend/: README.md  package-lock.json  package.json
backend/src/: index.js
backend/src/routes/: events.js
backend/src/scrapers/: arsenal.js  franko.js  index.js  khanenko.js  molodiy.js  opera.js  utils.js  vdng.js
backend/test/: smoke.test.js
docs/: ios-ipa-secrets-template.md
gradle/: verification-metadata.xml
iosApp/: README.md  project.yml
iosApp/PutivnykIOS/: ContentView.swift  Info.plist  PutivnykIOSApp.swift
iosApp/PutivnykIOS/Components/: SharedComponents.swift
iosApp/PutivnykIOS/Localization/: UiText.swift
iosApp/PutivnykIOS/Navigation/: MainTabView.swift
iosApp/PutivnykIOS/Resources/: kyiv_tourist_places.json  ui_en.json
iosApp/PutivnykIOS/Services/: AppServices.swift  IosAppTelemetry.swift  IosSyncService.swift  LocationService.swift
iosApp/PutivnykIOS/Theme/: PutivnykTheme.swift
iosApp/scripts/: build-shared.sh  sync-resources.sh
scripts/ios/: Dispatch-Ipa.ps1  build-ios-release-xcframework.sh  build-ios-sim.sh  dispatch-ipa.sh  generate-ios.sh  setup-and-build-ipa-ubuntu.sh
shared/: build.gradle.kts
(+193 files in other folders)
